# torch-from-cpp

./: CMakeLists.txt  load_model  load_model.cpp
